force-app/main/default/objects/FX_Order__c/FX_Order__c.object-meta.xml
<CustomObject>
    <label>FX Order</label>
    <nameField>
        <displayFormat>FX-{YYMMDD}-{000}</displayFormat>
        <label>FX Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FX Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>