force-app/main/default/objects/FX_Order__c/fields/FX_Order_Clone_Reference__c.field-meta.xml
<CustomField>
    <fullName>FX_Order_Clone_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Original clone order</description>
    <label>FX Order Clone Reference</label>
    <referenceTo>FX_Order__c</referenceTo>
    <relationshipLabel>FX Orders</relationshipLabel>
    <relationshipName>FX_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>