force-app/main/default/objects/FX_Order__c/fields/FXO_BuySell__c.field-meta.xml
<CustomField>
    <fullName>FXO_BuySell__c</fullName>
    <label>Bank Buy/Bank Sell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>