force-app/main/default/objects/FX_Order__c/fields/FXO_Bypass_InterbankRate__c.field-meta.xml
<CustomField>
    <fullName>FXO_Bypass_InterbankRate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Interbank Rate Validation</description>
    <label>Bypass Interbank Rate Validation</label>
    <type>Checkbox</type>
</CustomField>