force-app/main/default/objects/FX_Order__c/fields/FXO_Cancelled_Order_By_Stamp__c.field-meta.xml
<CustomField>
    <fullName>FXO_Cancelled_Order_By_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>