force-app/main/default/objects/FX_Order__c/fields/FXO_Cancelled_Order_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FXO_Cancelled_Order_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled Order Date/Time</label>
    <type>DateTime</type>
</CustomField>