force-app/main/default/objects/FX_Order__c/fields/FXO_Customer__c.field-meta.xml
<CustomField>
    <fullName>FXO_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FX Order</relationshipLabel>
    <relationshipName>FX_Order</relationshipName>
    <type>Lookup</type>
</CustomField>