force-app/main/default/objects/FX_Order__c/fields/FXO_CustomerRate__c.field-meta.xml
<CustomField>
    <fullName>FXO_CustomerRate__c</fullName>
    <label>Customer Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>