force-app/main/default/objects/FX_Order__c/fields/FXO_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>FXO_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>