force-app/main/default/objects/FX_Order__c/fields/FXO_FillAmount__c.field-meta.xml
<CustomField>
    <fullName>FXO_FillAmount__c</fullName>
    <label>Fill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>