force-app/main/default/objects/FX_Order__c/fields/FXO_Filled_Trade_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FXO_Filled_Trade_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filled/Trade Date/Time</label>
    <type>DateTime</type>
</CustomField>