force-app/main/default/objects/FX_Order__c/fields/FXO_FilledTradedBy__c.field-meta.xml
<CustomField>
    <fullName>FXO_FilledTradedBy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filled/Traded By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>