force-app/main/default/objects/FX_Order__c/fields/FXO_From_Import_Flag__c.field-meta.xml
<CustomField>
    <fullName>FXO_From_Import_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Import</label>
    <type>Checkbox</type>
</CustomField>