force-app/main/default/objects/FX_Order__c/fields/FXO_FXOrderSummary__c.field-meta.xml
<CustomField>
    <fullName>FXO_FXOrderSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FX Order Summary</label>
    <referenceTo>FX_Order_Summary__c</referenceTo>
    <relationshipLabel>FX Order</relationshipLabel>
    <relationshipName>FX_Order</relationshipName>
    <type>Lookup</type>
</CustomField>