force-app/main/default/objects/FX_Order__c/fields/FXO_FXSummary_Link__c.field-meta.xml
<CustomField>
    <fullName>FXO_FXSummary_Link__c</fullName>
    <formula>LEFT( $Api.Partner_Server_URL_90, FIND(&apos;.com&apos;,$Api.Partner_Server_URL_90)+4)
+ &quot;lightning/r/FX_Order_Summary__c/&quot;
+ FXO_FXOrderSummary__r.Id + &quot;/view&quot;</formula>
    <label>FX Summary Link</label>
    <type>Text</type>
</CustomField>