force-app/main/default/objects/FX_Order__c/fields/FXO_GTC__c.field-meta.xml
<CustomField>
    <fullName>FXO_GTC__c</fullName>
    <defaultValue>true</defaultValue>
    <label>GTC (Good &apos;Til Cancelled)</label>
    <type>Checkbox</type>
</CustomField>