force-app/main/default/objects/FX_Order__c/fields/FXO_Is_Order_Cloned__c.field-meta.xml
<CustomField>
    <fullName>FXO_Is_Order_Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to set if order already cloned</description>
    <label>FXO Is Order Cloned</label>
    <type>Checkbox</type>
</CustomField>