force-app/main/default/objects/FX_Order__c/fields/FXO_Order_Key__c.field-meta.xml
<CustomField>
    <fullName>FXO_Order_Key__c</fullName>
    <formula>TEXT(FXO_CurrencyPair__c) &amp; &quot; - &quot; &amp; IF(BEGINS(TEXT(FXO_InterbankRate__c),&apos;.&apos;),&apos;0&apos;+TEXT(FXO_InterbankRate__c),TEXT(FXO_InterbankRate__c)) &amp;  &quot; - &quot; &amp; TEXT(FXO_BuySell__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FXO Order Key</label>
    <type>Text</type>
</CustomField>