force-app/main/default/objects/FX_Order__c/fields/FXO_OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>FXO_OrderStatus__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Acknowledge</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Not Allocated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>