force-app/main/default/objects/FX_Order__c/fields/FXO_PartiallyAllocatedby__c.field-meta.xml
<CustomField>
    <fullName>FXO_PartiallyAllocatedby__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partially Allocated by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>