force-app/main/default/objects/FX_Order__c/fields/FXO_RemainingAmount__c.field-meta.xml
<CustomField>
    <fullName>FXO_RemainingAmount__c</fullName>
    <formula>FXO_RequestAmount__c  -  FXO_FillAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>