force-app/main/default/objects/FX_Order__c/fields/FXO_Remark__c.field-meta.xml
<CustomField>
    <fullName>FXO_Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>