force-app/main/default/objects/FX_Order__c/fields/FXO_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>FXO_Submitted_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>