force-app/main/default/objects/FX_Order__c/fields/Owner_s_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Role__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Owner&apos;s Role (Formula)</label>
    <type>Text</type>
</CustomField>