force-app/main/default/objects/FX_Order__c/fields/Owner_s_Segment__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Segment__c</fullName>
    <formula>Owner:User.Reporting_Segment__c</formula>
    <label>Owner&apos;s Segment (Formula)</label>
    <type>Text</type>
</CustomField>