force-app/main/default/objects/FX_Order__c/fields/Owner_s_Segment_stamp__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Segment_stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner&apos;s Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>