force-app/main/default/objects/FX_Order__c/fields/Temp_InterbankRateDecimal__c.field-meta.xml
<CustomField>
    <fullName>Temp_InterbankRateDecimal__c</fullName>
    <formula>RIGHT(Text(FXO_InterbankRate__c),(LEN( Text(FXO_InterbankRate__c) ) - FIND(&quot;.&quot;,Text(FXO_InterbankRate__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp_InterbankRateDecimal</label>
    <type>Text</type>
</CustomField>