force-app/main/default/objects/FX_Order__c/recordTypes/FX_Order.recordType-meta.xml
<RecordType>
    <fullName>FX_Order</fullName>
    <active>true</active>
    <description>Status=New,Submitted</description>
    <label>FX Order</label>
</RecordType>