force-app/main/default/objects/FX_Order__c/recordTypes/FX_Order_Completed.recordType-meta.xml
<RecordType>
    <fullName>FX_Order_Completed</fullName>
    <active>true</active>
    <description>Status = In Progress, Done, Cancelled, Acknowledged</description>
    <label>FX Order (Completed)</label>
</RecordType>