force-app/main/default/objects/FX_Order__c/validationRules/Check_value_between_GTC_Expiration_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_value_between_GTC_Expiration_Date</fullName>
    <active>true</active>
    <description>One of these field must be available</description>
    <errorConditionFormula>IF( FXO_GTC__c = TRUE ,
NOT(ISNULL(FXO_Expiration_Date__c)) || TEXT(FXO_Expiration_Date__c) &lt;&gt; &quot;&quot; ,
ISNULL(FXO_Expiration_Date__c) || TEXT(FXO_Expiration_Date__c) = &quot;&quot;
)</errorConditionFormula>
    <errorMessage>GTC or Expiration Date, One of these field must be available</errorMessage>
</ValidationRule>