force-app/main/default/objects/FX_Order__c/validationRules/Expire_Date_must_be_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Expire_Date_must_be_greater_than_today</fullName>
    <active>true</active>
    <description>Expiration Date/Time must not be earlier than System Date/Time</description>
    <errorConditionFormula>OR (AND( 
OR(Isnew(), ISCHANGED(FXO_Expiration_Date__c)) , 
FXO_Expiration_Date__c &lt; NOW() ),


MINUTE(TIMEVALUE(FXO_Expiration_Date__c )) &lt;&gt; 00

)</errorConditionFormula>
    <errorDisplayField>FXO_Expiration_Date__c</errorDisplayField>
    <errorMessage>Expiration Date/Time must be in hourly unit (:00) and cannot be earlier than System Date/Time.</errorMessage>
</ValidationRule>