force-app/main/default/objects/FX_Order__c/validationRules/Prevent_field_Number_less_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_field_Number_less_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>FXO_RequestAmount__c &lt; 0 || FXO_CustomerRate__c &lt; 0 || FXO_InterbankRate__c &lt; 0</errorConditionFormula>
    <errorMessage>Request Amount, Customer Rate and Interbank Rate must be greater than 0</errorMessage>
</ValidationRule>