force-app/main/default/objects/FX_Order__c/validationRules/Prevent_input_request_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_input_request_amount</fullName>
    <active>true</active>
    <description>Request Amount exceeds limit.</description>
    <errorConditionFormula>FXO_RequestAmount__c &gt; 100000000000</errorConditionFormula>
    <errorDisplayField>FXO_RequestAmount__c</errorDisplayField>
    <errorMessage>Request Amount exceeds limit.</errorMessage>
</ValidationRule>