force-app/main/default/objects/FX_Order__c/listViews/My_Active_FX_Orders.listView-meta.xml
<ListView>
    <fullName>My_Active_FX_Orders</fullName>
    <booleanFilter>1 OR( 2 AND 3)</booleanFilter>
    <columns>FXO_BuySell__c</columns>
    <columns>FXO_CurrencyPair__c</columns>
    <columns>FXO_RequestAmount__c</columns>
    <columns>FXO_FillAmount__c</columns>
    <columns>FXO_CustomerRate__c</columns>
    <columns>FXO_InterbankRate__c</columns>
    <columns>FXO_Customer__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>FXO_Expiration_Date__c</columns>
    <columns>FXO_Remark__c</columns>
    <columns>NAME</columns>
    <columns>FXO_FXOrderSummary__c</columns>
    <columns>FXO_OrderStatus__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Owner_s_Segment_stamp__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FXO_OrderStatus__c</field>
        <operation>equals</operation>
        <value>Done</value>
    </filters>
    <filters>
        <field>FXO_Acknowledged_Date_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>FXO_OrderStatus__c</field>
        <operation>equals</operation>
        <value>Acknowledge</value>
    </filters>
    <label>4. My Done FX Orders</label>
    <language>en_US</language>
</ListView>