force-app/main/default/objects/FX_Order__c/listViews/X6_2_All_SME_FX_Orders_Sell.listView-meta.xml
<ListView>
    <fullName>X6_2_All_SME_FX_Orders_Sell</fullName>
    <booleanFilter>1 AND 2 AND ( 3 or 4)</booleanFilter>
    <columns>FXO_BuySell__c</columns>
    <columns>FXO_CurrencyPair__c</columns>
    <columns>FXO_RequestAmount__c</columns>
    <columns>FXO_CustomerRate__c</columns>
    <columns>FXO_InterbankRate__c</columns>
    <columns>FXO_Customer__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>FXO_Expiration_Date__c</columns>
    <columns>FXO_Remark__c</columns>
    <columns>NAME</columns>
    <columns>FXO_OrderStatus__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Owner_s_Segment_stamp__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FX_Order__c.FX_Order</value>
    </filters>
    <filters>
        <field>FXO_BuySell__c</field>
        <operation>equals</operation>
        <value>Sell</value>
    </filters>
    <filters>
        <field>Owner_s_Segment_stamp__c</field>
        <operation>equals</operation>
        <value>CM-SME</value>
    </filters>
    <filters>
        <field>Owner_s_Role__c</field>
        <operation>equals</operation>
        <value>BB/SMERetail CM Sales TH/TL,SME CM Sales</value>
    </filters>
    <label>6.2 All SME FX Orders – Sell</label>
    <language>en_US</language>
</ListView>